$Id$

2015-05-16  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Samsung SpinPoint T166: 250GB
	- Seagate Samsung SpinPoint M8 (AF): Rename, add Apple OEM
	- Seagate Samsung SpinPoint M9T
	- Seagate Samsung SpinPoint M9TU (USB)
	- Hitachi/HGST Travelstar Z5K320
	- HGST Travelstar Z5K1000
	- HGST Deskstar NAS: 128MB cache variants
	- HGST Ultrastar He6
	- Seagate Laptop Thin HDD: 7200 rpm variants
	- Seagate Constellation ES.2 (SATA 6Gb/s): HP OEM
	- Seagate Constellation.2 (SATA): HP OEM
	- Seagate Enterprise Capacity 3.5 HDD
	- Seagate Archive HDD
	- Western Digital AV-GP (AF): 500MB, EURX variants
	- Western Digital Red Pro
	- Western Digital Purple

2015-05-14  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Crucial/Micron MX100/MX200/M5x0/M600 Client SSDs:
	  MX200 *00 sizes (ticket #545)
	- Samsung based SSDs: PM851, SM841N, 850 EVO
	- Marvell based SanDisk SSDs: Extreme Pro, Ultra II (ticket #544)
	- Marvell based SanDisk SSDs: X110 mSATA, X300
	- SanDisk based SSDs: pSSD (USB), U110
	- USB: Samsung D3 Station 4TB (0x04e8:0x6125) (ticket #549)
	- USB: Seagate Backup Plus USB 3.0 (0x0bc2:0xa003)
	- USB: Seagate Backup Plus Desktop USB 3.0 5TB (0x0bc2:0xab31)
	- USB: JMicron (0x152d:0x3569) (ticket #546)

2015-05-10  Christian Franke  <franke@computer.org>

	scsicmds.cpp, scsicmds.h: Remove unused functions
	scsiReceiveDiagnostic() and scsiSmartIBMOfflineTest().
	Found by cppcheck.

2015-05-05  Christian Franke  <franke@computer.org>

	ataprint.cpp: Print ACS-3 device statistics DSN flags.
	Print device statistics page numbers in hex.
	smartctl.cpp: Allow hex argument for '-l devstat,PAGE'.

2015-05-02  Christian Franke  <franke@computer.org>

	ataprint.cpp: Print Transport Type for PATA and PCIe.
	Print diagnostic values if SATA version or speed is unknown.
	smartctl.8.in, smartd.8.in: Add Volker Kuhlmann to AUTHORS section.

2015-05-01  Christian Franke  <franke@computer.org>

	ataidentify.cpp: ACS-3/4 updates.